Fix: Toast on mobile screen

--- a/src/components/styles/toast.css
+++ b/src/components/styles/toast.css
@@ -24,7 +24,7 @@
   @media only screen and (max-width: 480px) {
     .toastBox {
         width: 18rem;
-        position: absolute;
+        position: fixed;
         left: 2rem;
     }
 }
